--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@floating-ui/dom": "^1.2.6",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
     "delegate": "^3.2.0",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.3",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
